add popup preview without background

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">nutripekes-android</string>
     <string name="title_activity_menu_bar.kt">MenuBar.kt</string>
     <string name="title_activity_menu_bar">MenuBar</string>
+    <string name="title_activity_exercise_pop_up">ExercisePopUp</string>
 </resources>
