--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">nutripekes-android</string>
+    <string name="app_name">NutriPekes</string>
     <string name="title_activity_menu_bar.kt">MenuBar.kt</string>
     <string name="title_activity_menu_bar">MenuBar</string>
     <string name="title_activity_exercise_pop_up">ExercisePopUp</string>
